:bug: Message component show message align center in height & icon

--- a/src/popup/components/Message/Message.styl
+++ b/src/popup/components/Message/Message.styl
@@ -2,11 +2,12 @@
   position absolute
   background color-2
   display flex
+  align-items center
   opacity 0
   visibility hidden
   top 10px
   left 75px
-  padding 10px
+  padding 10px 30px 10px 10px
   border-radius 4px
   max-width 255px
   &:before
